packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/overloaded_methods.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(client 6 0x00 ())
(isolated 8 0x00 ())
(class 5 0x00 ())
(ident, "Client" 6 0x00 ())
({ 1 0x00 ())
(public 6 0x00 ())
(isolated 8 0x00 ())
(function 8 0x00 ())
(ident, "init" 4 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(} 1 0x00 ())
(isolated 8 0x00 ())
(resource 8 0x00 ())
(function 8 0x00 ())
(ident, "get" 3 0x00 ())
(ident, "abc" 3 0x00 ())
(/ 1 0x00 ())
([ 1 0x00 ())
(string 6 0x00 ())
(... 3 0x00 ())
(ident, "path" 4 0x00 ())
(] 1 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(int 3 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""getResource"" 13 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "testOverloadedMethods" 21 0x00 ())
(( 1 0x00 ())
(int 3 0x00 ())
([ 1 0x00 ())
(] 1 0x00 ())
(ident, "arr" 3 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "str" 3 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(string 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"" 54 0x00 ())
(, 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""testOverloadedMethods"" 23 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "getPrice" 8 0x00 ())
(( 1 0x00 ())
(handle 6 0x00 ())
(ident, "val" 3 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org.ballerinalang.test.javainterop.overloading.pkg.SportsCar"" 62 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
